examples/test_package/DoubleDC_Test/steps/benchrps__:precise.pl_run4/#test_analysis_2_result.txt
### **Evaluation Report: Rock-Paper-Scissors Game in ProbLog**

---

#### **1. Document Title**
**Analysis of Rock-Paper-Scissors Game Implementation in ProbLog**

---

#### **2. Background and Purpose**
The provided code implements a simple rock-paper-scissors game in ProbLog. The goal is to determine the winner of a series of moves between two players. The code includes predicates for defining moves, win-lose relationships, calculating results, and determining the winner based on the computed score.

The purpose of this evaluation is to:
- Verify the correctness of the implementation.
- Analyze any failures in the test results.
- Ensure compliance with classical Prolog and ProbLog rules.
- Identify edge cases and potential improvements.

---

#### **3. Test Results Summary**
The test query provided is:
```prolog
query(determine_winner([rock,rock,rock],[paper,paper,scissor],W)).
```

**Result:**
The test failed with the following error:
```
Error evaluating Problog model:
    return exec_func(node_id=node_id, node=node, **kwdargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/engine_stack.py", line 839, in eval_call
    raise UnknownClause(origin, location=loc)
problog.engine.UnknownClause: No clauses found for ''->'/2' at 41:77.
```

**Interpretation:**
The error indicates that the ProbLog engine could not find a clause for the `->/2` operator, which is used in the `determine_winner` predicate. This suggests a syntax or parsing issue in the code.

---

#### **4. Failure Localization**
- **Failed Query:** `determine_winner([rock,rock,rock],[paper,paper,scissor],W)`.
- **Error Location:** The error occurs in the `determine_winner` predicate, specifically at the line where the `->/2` operator is used.
- **Code Block with Issue:**
  ```prolog
  determine_winner(P1Moves, P2Moves, Winner) :- 
      play(P1Moves, P2Moves, Results), 
      compute_score(Results, Score), 
      (Score > 0 -> Winner = 'Player 1'; Score < 0 -> Winner = 'Player 2'; Winner = 'Draw').
  ```

**Issue:**
The `->/2` operator is not correctly parsed or supported in the ProbLog context, leading to the `UnknownClause` error.

---

#### **5. Root Cause Analysis**
- **Classical Prolog Context:**
  - The logic of the `result/3`, `play/3`, and `compute_score/2` predicates is correct and terminates properly.
  - The issue arises from the use of the `->/2` operator, which is not compatible with ProbLog's syntax.

- **ProbLog Context:**
  - ProbLog does not support the `->/2` operator in the same way as classical Prolog. Instead, conditional logic should be implemented using `if-then-else` constructs or auxiliary predicates.

- **DeepProbLog:**
  - No DeepProbLog features (e.g., `nn/3`, `tensor/...`) are used in the code. The report confirms: "DeepProbLog feature not used."

---

#### **6. Overall Analysis**
- **Functional Requirements:**
  - **Classical Reasoning:** The core logic for determining game results and scores is correctly implemented.
  - **Probabilistic Reasoning:** Not applicable here, as the code does not use probabilistic facts or rules.
  - **Neural Network Integration:** Not used.

- **Edge Cases:**
  - **Non-list Input:** The code does not handle cases where `P1Moves` or `P2Moves` are not lists.
  - **Empty Lists:** The `play/3` and `compute_score/2` predicates correctly handle empty lists.
  - **Deep Recursion:** The recursion depth is limited by the length of the input lists, so performance is not an issue for typical use cases.

---

#### **7. Error Summary**

| No. | Problem | Impact | Suggestion |
|-----|---------|--------|------------|
| 1   | `->/2` operator not supported in ProbLog | Code fails to execute | Replace `->/2` with an `if-then-else` auxiliary predicate or use ProbLog-compatible syntax. |
| 2   | No handling for non-list inputs | Potential runtime errors | Add input validation to ensure `P1Moves` and `P2Moves` are lists. |

---

### **Final Recommendations**
1. **Fix the `->/2` Operator Issue:**
   Replace the problematic line with:
   ```prolog
   determine_winner(P1Moves, P2Moves, Winner) :- 
       play(P1Moves, P2Moves, Results), 
       compute_score(Results, Score), 
       (Score > 0, Winner = 'Player 1'; Score < 0, Winner = 'Player 2'; Winner = 'Draw').
   ```

2. **Add Input Validation:**
   Ensure `P1Moves` and `P2Moves` are lists before processing.

3. **Test Edge Cases:**
   Include tests for non-list inputs and varying list lengths.

By addressing these issues, the code will be robust and compliant with ProbLog's syntax and requirements.